# ops-incident-agent

./: .gitignore  ARCHITECTURE.md  EXAMPLES.md  Makefile  README.md  REPOSITORY_TREE.md  pyproject.toml
src/ops_agent/: __init__.py
src/ops_agent/agentic/: __init__.py  graph.py  nodes.py  schemas.py  state.py
src/ops_agent/agentic/tools/: __init__.py  contracts.py  fake_metrics.py
src/ops_agent/api/: main.py  models.py
src/ops_agent/api/routers/: runs.py
src/ops_agent/application/: __init__.py  executor.py  interfaces.py  run_service.py
src/ops_agent/infra/: __init__.py  checkpoint_store.py  logging.py  run_store.py
tests/: __init__.py  conftest.py  test_api.py  test_graph.py
