[project]
name = "ops-agent"
version = "0.1.0"
description = "Chapter 1: Ops Incident Response Agent (LangGraph + FastAPI)"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "uvicorn>=0.27",
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
  "langgraph>=0.2.0",
  "structlog>=24.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "httpx>=0.27",
  "ruff>=0.6",
  "mypy>=1.8",
  "types-requests",
]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-select = ["I"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
no_implicit_optional = true
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
[tool.setuptools.packages.find]
where = ["src"]
